--- a/resources/assets/stylesheets/scss/variables.scss
+++ b/resources/assets/stylesheets/scss/variables.scss
@@ -13,7 +13,7 @@ $font-size-h2:            floor($font-size-base * 1.2); // ~30px
 $font-size-h3:            ceil($font-size-base * 1.1); // ~24px
 $font-size-h4:            $font-size-base; // ~18px
 $font-size-h5:            $font-size-base;
-$font-size-h6:            ceil($font-size-base * 0.85); // ~12px
+$font-size-h6:            $font-size-base;
 
 //** Unit-less `line-height` for use in components like buttons.
 $line-height-base:        1.428571429; // 20/14
@@ -24,7 +24,7 @@ $line-height-computed:    floor($font-size-base * $line-height-base); // ~20px
 $headings-font-family:    inherit;
 $headings-font-weight:    700;
 $headings-line-height:    1.1;
-$headings-color:          #444444;
+$headings-color:          #000;
 
 // Design specific
 $bar-bottom-container-height: 40px;
