--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -99,6 +99,7 @@
 @import "scss/typography";
 @import "scss/user-administration";
 @import "scss/wiki";
+@import "scss/multi_person_search";
 
 
 // Class for DOM elements that should only be visible to Screen readers
