--- a/resources/assets/stylesheets/scss/content.scss
+++ b/resources/assets/stylesheets/scss/content.scss
@@ -54,6 +54,24 @@
     pre {   // pre-formatted content breaks the Stud.IP Layout!
         white-space: pre-wrap;
     }
+
+    figure {
+        display: table;
+        margin: 0.9em auto;
+
+        table {
+            width: 100%;
+            height: 100%;
+            border-collapse: collapse;
+            border-spacing: 0;
+
+            td {
+                border: unset;
+                min-width: 2em;
+                padding: 0.4em;
+            }
+        }
+    }
 }
 
 // Emphasize tt tags a little bit so ##monospace## blocks will stick out.
