--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -837,6 +837,14 @@ ribbon end
             font-weight: 700;
             line-height: 2em;
             font-size: 1.1em;
+
+            &.cw-default-container-blocker-warning {
+                font-weight: 400;
+            }
+        }
+
+        img {
+            vertical-align: text-bottom;
         }
 
         .cw-container-actions {
@@ -977,6 +985,15 @@ form.cw-container-dialog-edit-form {
         font-weight: 700;
         line-height: 2em;
         font-size: 1.1em;
+
+        &.cw-default-block-invisible-info,
+        &.cw-default-block-blocker-warning {
+            font-weight: 400;
+        }
+    }
+
+    img {
+        vertical-align: text-bottom;
     }
 
     .cw-block-actions {
@@ -2002,6 +2019,9 @@ v i e w  w i d g e t
     }
     .cw-action-widget-link {
         @include background-icon(group, clickable);
+    }
+    .cw-action-widget-remove-lock{
+        @include background-icon(lock-unlocked, clickable);
     }
 }
 .cw-export-widget {
