rename scss-function, closes #1603
Closes #1603

Merge request studip/studip!1031

--- a/resources/assets/stylesheets/mixins/colors.scss
+++ b/resources/assets/stylesheets/mixins/colors.scss
@@ -124,9 +124,9 @@ $fieldset-header: $content-color-20;
 $fieldset-border: $base-color-20;
 
 // contrast colors
-$contrast-content-white: contrast($content-color, #ffffff, #000000, 67%);
-$contrast-content-gray: contrast($content-color, $dark-gray-color, #000000 , 67%);
-$contrast-content-hovergray: contrast($content-color, $dark-gray-color-10, $dark-gray-color);
+$contrast-content-white: text-contrast($content-color, #ffffff, #000000, 67%);
+$contrast-content-gray: text-contrast($content-color, $dark-gray-color, #000000 , 67%);
+$contrast-content-hovergray: text-contrast($content-color, $dark-gray-color-10, $dark-gray-color);
 
 $public-course-bgcolor: $red;
 
