--- a/resources/assets/stylesheets/highcontrast.scss
+++ b/resources/assets/stylesheets/highcontrast.scss
@@ -596,7 +596,7 @@ div.schedule_entry {
             border: 1px solid $calendar-category-1;
             dt {
                 background-color: $calendar-category-1;
-                color: contrast($calendar-category-1, $black, $white);
+                color: text-contrast($calendar-category-1, $black, $white);
             }
             dd {
                 color: $black;
@@ -607,7 +607,7 @@ div.schedule_entry {
             border: 1px solid $calendar-category-2;
             dt {
                 background-color: $calendar-category-2;
-                color: contrast($calendar-category-2, $black, $white);
+                color: text-contrast($calendar-category-2, $black, $white);
             }
             dd {
                 color: $black;
@@ -618,7 +618,7 @@ div.schedule_entry {
             border: 1px solid $calendar-category-3;
             dt {
                 background-color: $calendar-category-3;
-                color: contrast($calendar-category-3, $black, $white);
+                color: text-contrast($calendar-category-3, $black, $white);
             }
             dd {
                 color: $black;
@@ -629,7 +629,7 @@ div.schedule_entry {
             border: 1px solid $calendar-category-4;
             dt {
                 background-color: $calendar-category-4;
-                color: contrast($calendar-category-4, $black, $white);
+                color: text-contrast($calendar-category-4, $black, $white);
             }
             dd {
                 color: $black;
@@ -640,7 +640,7 @@ div.schedule_entry {
             border: 1px solid $calendar-category-5;
             dt {
                 background-color: $calendar-category-5;
-                color: contrast($calendar-category-5, $black, $white);
+                color: text-contrast($calendar-category-5, $black, $white);
             }
             dd {
                 color: $black;
@@ -651,7 +651,7 @@ div.schedule_entry {
             border: 1px solid $calendar-category-6;
             dt {
                 background-color: $calendar-category-6;
-                color: contrast($calendar-category-6, $black, $white);
+                color: text-contrast($calendar-category-6, $black, $white);
             }
             dd {
                 color: $black;
@@ -662,7 +662,7 @@ div.schedule_entry {
             border: 1px solid $calendar-category-7;
             dt {
                 background-color: $calendar-category-7;
-                color: contrast($calendar-category-7, $black, $white);
+                color: text-contrast($calendar-category-7, $black, $white);
             }
             dd {
                 color: $black;
@@ -673,7 +673,7 @@ div.schedule_entry {
             border: 1px solid $calendar-category-8;
             dt {
                 background-color: $calendar-category-8;
-                color: contrast($calendar-category-8, $black, $white);
+                color: text-contrast($calendar-category-8, $black, $white);
             }
             dd {
                 color: $black;
@@ -684,7 +684,7 @@ div.schedule_entry {
             border: 1px solid $calendar-category-9;
             dt {
                 background-color: $calendar-category-9;
-                color: contrast($calendar-category-9, $black, $white);
+                color: text-contrast($calendar-category-9, $black, $white);
             }
             dd {
                 color: $black;
@@ -695,7 +695,7 @@ div.schedule_entry {
             border: 1px solid $calendar-category-10;
             dt {
                 background-color: $calendar-category-10;
-                color: contrast($calendar-category-10, $black, $white);
+                color: text-contrast($calendar-category-10, $black, $white);
             }
             dd {
                 color: $black;
@@ -706,7 +706,7 @@ div.schedule_entry {
             border: 1px solid $calendar-category-11;
             dt {
                 background-color: $calendar-category-11;
-                color: contrast($calendar-category-11, $black, $white);
+                color: text-contrast($calendar-category-11, $black, $white);
             }
             dd {
                 color: $black;
@@ -717,7 +717,7 @@ div.schedule_entry {
             border: 1px solid $calendar-category-12;
             dt {
                 background-color: $calendar-category-12;
-                color: contrast($calendar-category-12, $black, $white);
+                color: text-contrast($calendar-category-12, $black, $white);
             }
             dd {
                 color: $black;
@@ -728,7 +728,7 @@ div.schedule_entry {
             border: 1px solid $calendar-category-13;
             dt {
                 background-color: $calendar-category-13;
-                color: contrast($calendar-category-13, $black, $white);
+                color: text-contrast($calendar-category-13, $black, $white);
             }
             dd {
                 color: $black;
@@ -739,7 +739,7 @@ div.schedule_entry {
             border: 1px solid $calendar-category-14;
             dt {
                 background-color: $calendar-category-14;
-                color: contrast($calendar-category-14, $black, $white);
+                color: text-contrast($calendar-category-14, $black, $white);
             }
             dd {
                 color: $black;
@@ -750,7 +750,7 @@ div.schedule_entry {
             border: 1px solid $calendar-category-15;
             dt {
                 background-color: $calendar-category-15;
-                color: contrast($calendar-category-15, $black, $white);
+                color: text-contrast($calendar-category-15, $black, $white);
             }
             dd {
                 color: $black;
