--- a/resources/assets/stylesheets/scss/copyable-links.scss
+++ b/resources/assets/stylesheets/scss/copyable-links.scss
@@ -1,69 +1,24 @@
-.copyable-link-animation {
-    $animation-name: copyable-links-confirmation;
-    $animation-duration: 2s;
+.copyable-link-confirmation {
+    position: fixed;
+    bottom: 60px;
+    right: 12px;
+    height: 60px;
+    line-height: 60px;
+    max-width: calc(100% - 140px);
+    z-index: 42000;
+    border: solid thin $content-color-40;
+    background-color: $white;
+    background-repeat: no-repeat;
+    background-position: 1em center;
+    background-size: 100px;
+    box-shadow: 5px 5px #ececed;
+    padding: 5px 100px;
+    transition: transform .5s ease;
 
-    // Position confirmation message above the link
-    position: relative;
-
-    div {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-
-        text-align: center;
-
-        @include icon(before, check-circle, status-green, 16px, 5px);
+    &.copyable-link-success {
+        @include background-icon(check-circle, status-green, 24);
     }
-
-    // Flip the link and confirmation message along the x axis
-    a, div {
-        backface-visibility: hidden;
-        pointer-events: none;
-    }
-
-    a {
-        @keyframes copyable-links-confirmation-front {
-            0% {
-                opacity: 1;
-                transform: rotateX(0);
-            }
-            33% {
-                opacity: 0;
-                transform: rotateX(180deg);
-            }
-            66% {
-                opacity: 0;
-                transform: rotateX(180deg);
-            }
-            100% {
-                opacity: 1;
-                transform: rotateX(0);
-            }
-        }
-        animation: copyable-links-confirmation-front $animation-duration linear;
-    }
-
-    div {
-        @keyframes copyable-links-confirmation-back {
-            0% {
-                opacity: 0;
-                transform: rotateX(180deg);
-            }
-            33% {
-                opacity: 1;
-                transform: rotateX(0);
-            }
-            66% {
-                opacity: 1;
-                transform: rotateX(0);
-            }
-            100% {
-                opacity: 0;
-                transform: rotateX(180deg);
-            }
-        }
-        animation: copyable-links-confirmation-back $animation-duration linear;
+    &.copyable-link-error {
+        @include background-icon(decline-circle, status-red, 24);
     }
 }
