import less, closes #1693
Closes #1693

Merge request studip/studip!1094

--- a/resources/assets/stylesheets/studip.less
+++ b/resources/assets/stylesheets/studip.less
@@ -14,6 +14,7 @@
 @import "less/buttons.less";
 @import "less/messagebox.less";
 @import "less/calendar.less";
+@import "less/schedule.less";
 @import "less/files.less";
 
 
