--- a/resources/assets/stylesheets/scss/personal-notifications.scss
+++ b/resources/assets/stylesheets/scss/personal-notifications.scss
@@ -1,15 +1,14 @@
 #notification_marker {
-    width: 48px;
-    margin-left: 0;
-    padding-left: 0;
-    margin-right: 0;
-    padding-right: 0;
-    height: 28px;
+    margin-left: 0px;
+    padding-left: 0px;
+    margin-right: 0px;
+    padding-right: 0px;
+    width: 100%;
+    height: 100%;
     font-size: 0.8em;
     color: $base-color;
     text-align: center;
     line-height: 28px;
-    vertical-align: text-bottom;
     background-color: $dark-gray-color-10;
     border: 1px solid $dark-gray-color-40;
 
@@ -66,6 +65,15 @@
     &.hoverable:hover {
         .list { display: block; }
     }
+
+    #notification_checkbox {
+        display: none;
+    }
+
+    &.hoverable #notification_checkbox:checked + #notification_list {
+        display: block;
+    }
+
     #notification_list {
         z-index: 1001;
         margin-top: 10px;
@@ -79,6 +87,11 @@
         }
     }
     .list {
+
+        ul {
+            list-style-type: none;
+        }
+
         // Creates an arrow pointing from the list to the triggering element
         @include arrow-top-border(10px, $white, 1px, $light-gray-color-80);
 
@@ -122,7 +135,6 @@
             $padding: 5px;
             border-top: thin solid $light-gray-color-60;
             line-height: 20px;
-            display: block;
             height: auto;
             padding: $padding;
             white-space: normal;
@@ -144,26 +156,33 @@
             &:first-child {
                 border-top: 0;
             }
-            .content {
+
+            .main {
                 display: flex;
                 flex-direction: row;
-                flex-wrap: nowrap;
 
-                .avatar {
-                    $avatar-size: 40px;
-                    margin-right: 10px;
-                    margin-left: 0;
-                    background-position: center center;
-                    background-size: 100%;
-                    background-repeat: no-repeat;
-                    width: $avatar-size;
-                    height: $avatar-size;
-                    min-width: $avatar-size;
+                .content {
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: nowrap;
+                    flex-grow: 1;
+
+                    .avatar {
+                        $avatar-size: 40px;
+                        margin-right: 10px;
+                        margin-left: 0;
+                        background-position: center center;
+                        background-size: 100%;
+                        background-repeat: no-repeat;
+                        width: $avatar-size;
+                        height: $avatar-size;
+                        min-width: $avatar-size;
+                    }
                 }
             }
         }
 
-        a {
+        a:not(.mark-all-as-read) {
             color: $brand-color-dark;
             display: block;
             padding: 0;
@@ -171,9 +190,11 @@
         }
 
         .options {
+            border: 0;
+            background: none;
             cursor: pointer;
-            float: right;
             padding-top: 4px;
+            height: 24px;
             > img {
                 vertical-align: top;
             }
@@ -183,10 +204,11 @@
         .item:hover .options.hidden { visibility: visible; }
     }
 
-    a.mark-all-as-read,
+    a.mark-all-as-read:not(.invisible),
     a.enable-desktop-notifications {
         background-color: $dark-gray-color-15;
         border-bottom: thin solid $dark-gray-color-45;
+        display: block;
         max-height: 31px;
         padding: 5px 5px 5px 14px;
         z-index: 3;
@@ -213,26 +235,6 @@
 
         // Create blind effect to hide/display this links smoothly
         transition: all 300ms;
-
-        &.notification_hidden {
-            border-bottom-width: 0;
-            max-height: 0;
-            opacity: 0;
-            padding-bottom: 0;
-            padding-top: 0;
-            pointer-events: none;
-
-            + .enable-desktop-notifications {
-                // Creates an arrow pointing from the list to the triggering element
-                @include arrow-top-border(10px, $light-gray-color-20, 1px, $light-gray-color-80);
-                &::before,
-                &::after {
-                    left: ($list-width - 30px);
-                    z-index: 2;
-                }
-                margin: 0;
-            }
-        }
     }
     a.enable-desktop-notifications {
         @include background-icon('notification', 'clickable');
