--- a/resources/assets/stylesheets/scss/search.scss
+++ b/resources/assets/stylesheets/scss/search.scss
@@ -191,8 +191,10 @@ div#div-search-input {
 
     // visual adjustments for the reset button
     button#reset-search {
-        background-color: transparent;
-        border: 0;
+        background-color: $white;
+        border-bottom: 1px solid $light-gray-color-40;
+        border-top: 1px solid $light-gray-color-40;
+        margin-left: -1px;
         padding-left: 10px;
     }
 
