--- a/resources/assets/stylesheets/scss/sidebar.scss
+++ b/resources/assets/stylesheets/scss/sidebar.scss
@@ -298,45 +298,58 @@ select.sidebar-selectlist {
 }
 
 .sidebar-search {
-    .needles input[type=text] {
-        box-sizing: border-box;
-        border: 1px solid $base-color-60;
-        border-right-width: 30px;
-        float: left;
-        height: 22px;
-        width: 100%;
-    }
-    input[type=submit] {
-        font: 0/0 a;
-        color: transparent;
-        text-shadow: none;
-        background-color: transparent;
-        border: 0;
-
-        // Activate when twitter-mixins is included as scss and remove the above rules
-        // @include hide-text();
-
-        width: 29px;
-        height: 20px;
-        @include background-icon(search, info_alt);
-        float: left;
-        background-position: center 3px;
-        background-repeat: no-repeat;
-        vertical-align: top;
-        margin-left: -30px;
-    }
-    ul.needles {
+    .needles {
         list-style: none;
         margin: 0;
         padding: 0;
+
         li {
-            @include clearfix();
+            display: flex;
             margin-bottom: 0.5em;
+
             &:last-child {
                 margin-bottom: 0;
             }
+
+            .input-group {
+                margin-bottom: 0;
+                margin-top: 0;
+
+                input[type=text] {
+                    box-sizing: border-box;
+                    border: 1px solid $base-color-60;
+                    border-right: none;
+                    flex: 1;
+                    padding: .375rem .75rem;
+                    width: 100%;
+                }
+
+                button {
+                    background-color: $content-color-20;
+                    border: 1px solid $base-color-60;
+                    border-left-color: $light-gray-color-40;
+                    border-radius: 0;
+                    color: transparent;
+                    cursor: pointer;
+                    font: 0/0 a;
+                    height: 30px;
+                    text-shadow: none;
+                }
+
+                .reset-search {
+                    border: 1px solid $base-color-60;
+                    border-left: 0;
+                    border-right: 0;
+                    display: inline-block;
+                    padding-right: 5px;
+                    padding-top: 4px;
+                    cursor: pointer;
+                }
+
+            }
         }
     }
+
     ul.filters {
         list-style: none;
         margin: 0;
