--- a/resources/assets/stylesheets/scss/sidebar.scss
+++ b/resources/assets/stylesheets/scss/sidebar.scss
@@ -324,7 +324,7 @@ select.sidebar-selectlist {
                     width: 100%;
                 }
 
-                button {
+                .submit-search {
                     background-color: $content-color-20;
                     border: 1px solid $base-color-60;
                     border-left-color: $light-gray-color-40;
@@ -336,6 +336,7 @@ select.sidebar-selectlist {
                 }
 
                 .reset-search {
+                    background-color: transparent;
                     border: 1px solid $base-color-60;
                     border-left: 0;
                     border-right: 0;
