lock times for consultation blocks, fixes #1264
Closes #1264

Merge request studip/studip!785

--- a/resources/assets/stylesheets/scss/consultation.scss
+++ b/resources/assets/stylesheets/scss/consultation.scss
@@ -23,10 +23,13 @@
     }
 }
 .consultation-free {
-    color: $green;
+    color: var(--green);
 }
 .consultation-occupied {
-    color: $red;
+    color: var(--red);
+}
+.consultation-slot-not-bookable {
+    color: var(--light-gray-color);
 }
 
 .consultation-overview {
