Unify loading animations across the system, fixes #930
Closes #930

Merge request studip/studip!546

--- a/resources/assets/stylesheets/scss/admin.scss
+++ b/resources/assets/stylesheets/scss/admin.scss
@@ -148,7 +148,7 @@ fieldset.attribute_table {
         }
 
         &.ajaxing {
-            background-image: url("#{$image-path}/ajax_indicator_small.gif");
+            background-image: url("#{$image-path}/loading-indicator.svg");
         }
     }
 }
