--- a/resources/assets/stylesheets/scss/globalsearch.scss
+++ b/resources/assets/stylesheets/scss/globalsearch.scss
@@ -122,7 +122,7 @@
         display: none;
         text-align: center;
 
-        background-image: url("#{$image-path}/ajax-indicator-black.svg");
+        background-image: url("#{$image-path}/loading-indicator.svg");
         background-position: center bottom;
         background-repeat: no-repeat;
         background-size: $icon-size;
