--- a/resources/assets/stylesheets/scss/installer.scss
+++ b/resources/assets/stylesheets/scss/installer.scss
@@ -135,7 +135,7 @@
                 background-size: 16px;
             }
             dt.requesting {
-                background: url('#{$image-path}/ajax-indicator-black.svg') no-repeat top 3px right;
+                background: url('#{$image-path}/loading-indicator.svg') no-repeat top 3px right;
                 background-size: 16px;
             }
 
