--- a/resources/assets/stylesheets/scss/progress_indicator.scss
+++ b/resources/assets/stylesheets/scss/progress_indicator.scss
@@ -5,7 +5,7 @@
 
     .progress-indicator {
         width: 100%;
-        background-image: url("#{$image-path}/ajax-indicator-black.svg");
+        background-image: url("#{$image-path}/loading-indicator.svg");
         background-repeat: no-repeat;
         background-position: center;
     }
