--- a/resources/assets/stylesheets/scss/smileys.scss
+++ b/resources/assets/stylesheets/scss/smileys.scss
@@ -88,7 +88,7 @@
     }
 
     &.ajax {
-        background-image: url("#{$image-path}/ajax_indicator_small.gif");
+        background-image: url("#{$image-path}/loading-indicator.svg");
     }
 }
 
