--- a/resources/assets/stylesheets/scss/search.scss
+++ b/resources/assets/stylesheets/scss/search.scss
@@ -10,7 +10,7 @@ label.inactive-settings-category {
         display: none;
         text-align: center;
 
-        background-image: url("#{$image-path}/ajax-indicator-black.svg");
+        background-image: url("#{$image-path}/loading-indicator.svg");
         background-position: center bottom;
         background-repeat: no-repeat;
         background-size: $icon-size;
