add lost filter rule, fixes #1828
Closes #1828

Merge request studip/studip!1205

--- a/resources/assets/stylesheets/scss/navigation.scss
+++ b/resources/assets/stylesheets/scss/navigation.scss
@@ -272,6 +272,8 @@ body.fixed {
         display: none;
 
         img {
+            filter: contrast(0) brightness(2);
+
             @include square(16px);
             margin-right: 0.8em;
         }
